# qt_delete_example

./: CMakeLists.txt
src/: button.cpp  button.h  button.ui  buttonstack.cpp  buttonstack.h  buttonstack.ui  main.cpp
